--- a/index.html
+++ b/index.html
@@ -74,19 +74,53 @@
     <!-- develop section  -->
 
     <section class="flexible-container">
-        <div class="develop">
+        <div class="half-width">
             <img src="images/coding.png" alt="app-image">
         </div>
-        <div class="develop">
+        <div id="develop-width" class="half-width">
             <h2>Develop
                 Without Limits</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                 deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
-                 mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
-                 dissentias et cum.</p>
+                <p>Development Without Limits is an organization that works to develop curriculum with after school and summer programs in order to promote the high-quality and effective learning through tailoring programs to be engaging and and dynamic for students</p>
             <a class="link-button" href="">Read the Documentation</a>
         </div>
     </section>
+
+
+    <section  class="flexible-container">
+
+        <div class="global">
+            <h2>Know our Global Community</h2>
+            <p>As the twentieth century draws to a close, we find that the world has grown smaller and the world's people have become almost one community. Political and military alliances have created large multinational groups,industry and international trade have produced a global economy, and worldwide-communications are eliminating ancient barriers of distance</p>
+            <a class="link-button" href="">Read the Documentation</a>
+        </div>
+
+        <div class="global">
+            <img src="images/project.png" alt="project-image">
+        </div>
+    </section>
+
+
+    <section class="Corona-area">
+        <h1 class="corna-header">Build<span class="orange-color">Corona Application</span></h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <img src="images/vaccine.jpg" alt="vaccine-image">
+            </div>
+
+            <div class="half-width">
+                <h1 class="corna-header">Benefits of Getting a <span class="orange-color">COVID-19 Vaccine.</span></h1>
+                <p>COVID 19-vaccines are effective and can reduce the risk of getting and spreading the virus that causes COVID-19. Learn more about the different COVID-19 vaccines. COVID-19 vaccines also help children and adults from getting seriously ill even if they do get COVID-19.</p>
+                <a class="link-button" href="">Find Your Vaccine</a>
+            </div>
+
+        </div>
+
+    </section>
+
+    <footer>
+        <h1>Mission <span class="tomato">2022</span> </h1>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
     
 </body>
 </html>
