--- a/index.html
+++ b/index.html
@@ -73,30 +73,8 @@
 
     <!-- develop section  -->
 
-    <section class="flexible-container">
-        <div class="half-width">
-            <img src="images/coding.png" alt="app-image">
-        </div>
-        <div id="develop-width" class="half-width">
-            <h2>Develop
-                Without Limits</h2>
-                <p>Development Without Limits is an organization that works to develop curriculum with after school and summer programs in order to promote the high-quality and effective learning through tailoring programs to be engaging and and dynamic for students</p>
-            <a class="link-button" href="">Read the Documentation</a>
-        </div>
-    </section>
-
-
-    <section  class="flexible-container">
-
-        <div class="global">
-            <h2>Know our Global Community</h2>
-            <p>As the twentieth century draws to a close, we find that the world has grown smaller and the world's people have become almost one community. Political and military alliances have created large multinational groups,industry and international trade have produced a global economy, and worldwide-communications are eliminating ancient barriers of distance</p>
-            <a class="link-button" href="">Read the Documentation</a>
-        </div>
-
-        <div class="global">
-            <img src="images/project.png" alt="project-image">
-        </div>
+    <section class="develop-area">
+  
     </section>
 
 
