style added commit

--- a/index.html
+++ b/index.html
@@ -46,26 +46,17 @@
             <div id="mission" class="mission-item">
                 <img src="images/illustrator-1.png" alt="mission-image">
                 <h3>Mission</h3>
-                <p>Amet minim mollit non deserunt 
-                 ullamco est sit aliqua dolor do amet 
-                 sint. Velit officia consequat duis enim 
-                 velit mollit.</p>
+                <p>We positively transform the urban landscape by developing, owning, and investing in real estate in the greater Baltimore/Washington market.</p>
             </div>
             <div id="vission" class="mission-item">
                 <img src="images/illustrator-2.png" alt="Vission-image">
                 <h3>Vission</h3>
-                <p>Amet minim mollit non deserunt 
-                 ullamco est sit aliqua dolor do amet 
-                 sint. Velit officia consequat duis enim 
-                 velit mollit.</p>
+                <p>Our vision is to be the partner of choice for those who believe that smart, thoughtful real estate development changes communities for the better.</p>
             </div>
             <div id="goals" class="mission-item">
                 <img src="images/illustrator-3.png" alt="goals-image">
                 <h3>Goals</h3>
-                <p>Amet minim mollit non deserunt 
-                 ullamco est sit aliqua dolor do amet 
-                 sint. Velit officia consequat duis enim 
-                 velit mollit.</p>
+                <p>Professional development depends on many external factors, but in the end, everything lies in your hands. Learn how to set SMART lifetime professional goals on various career levels.</p>
             </div>
         </div>
 
@@ -74,18 +65,50 @@
     <!-- develop section  -->
 
     <section class="develop-area">
-  
+
+        <div class="flexible-container">
+            <div class="half-width">
+                <img src="images/coding.png" alt="coding-image">
+            </div>
+    
+            <div id="dev-area" class="half-width">
+                <h2>Develop Without Limits</h2>
+                <p>Development Without Limits is an organization that works to develop curriculum with after school and summer programs in order to promote the high-quality and effective learning through tailoring programs to be engaging and and dynamic for students</p>
+                <a target="blank" class="link-button" href="">Read the Documentation</a>
+            </div>
+        </div>
+
+    </section >
+
+
+
+    <section class="global-area">
+
+        <div class="flexible-container">
+
+            <div  class="half-width">
+                <h2>Know our Global Community</h2>
+                <p>As the twentieth century draws to a close, we find that the world has grown smaller and the world's people have become almost one community. Political and military alliances have created large multinational groups, industry and international trade have produced a global economy, and worldwide-communications are eliminating ancient barriers of distance</p>
+                <a target="blank" class="link-button" href="">Read the Documentation</a>
+            </div>
+
+            <div class="half-width">
+                <img src="images/project.png" alt="project-image">
+            </div>
+
+        </div>
+
     </section>
 
 
     <section class="Corona-area">
-        <h1 class="corna-header">Build<span class="orange-color">Corona Application</span></h1>
+        <h1 class="corna-header">Build <span class="orange-color">Corona Application</span></h1>
         <div class="flexible-container">
             <div class="half-width">
                 <img src="images/vaccine.jpg" alt="vaccine-image">
             </div>
 
-            <div class="half-width">
+            <div id="corona-item" class="half-width">
                 <h1 class="corna-header">Benefits of Getting a <span class="orange-color">COVID-19 Vaccine.</span></h1>
                 <p>COVID 19-vaccines are effective and can reduce the risk of getting and spreading the virus that causes COVID-19. Learn more about the different COVID-19 vaccines. COVID-19 vaccines also help children and adults from getting seriously ill even if they do get COVID-19.</p>
                 <a class="link-button" href="">Find Your Vaccine</a>
