style added commit

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div id="corona-item" class="half-width">
                 <h1 class="corna-header">Benefits of Getting a <span class="orange-color">COVID-19 Vaccine.</span></h1>
                 <p>COVID 19-vaccines are effective and can reduce the risk of getting and spreading the virus that causes COVID-19. Learn more about the different COVID-19 vaccines. COVID-19 vaccines also help children and adults from getting seriously ill even if they do get COVID-19.</p>
-                <a class="link-button" href="">Find Your Vaccine</a>
+                <a target="blank" class="link-button" href="">Find Your Vaccine</a>
             </div>
 
         </div>
