--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section class="next-level">
         <h2 class="next-h2">What's In It For</h2>
-        <h2 class="you">You?</h2>
+        <h2 class="gradient">You?</h2>
         <p class="para">Everything you need to take your website to the</p>
         <h2>next level.</h2>
         <div class="flexible-container">
